  * text.PHPTokenizer (-"-)
  * text.PHPSyntaxHighlighter (-"-)
  * util.ChainedException (replaced by lang.ChainedException)
  * util.DateInterval (renamed to TimeInterval to avoid name clash)
  * util.cmd.Runner (moved to xp.command.Runner)
  * xml.XML (functionality moved to xml.Tree)
  (friebe)
- Deprecated ref() and deref() core functionality
  (friebe)

Features
~~~~~~~~
- Changed command line reflection ("xp -r") to display generic definitions
  (friebe)
- Extended is() core functionality to accept primitive and array types
  (friebe)
- Added isInstance() method to lang.Type and lang.Primitive classes
  (friebe)
- Added typeof() core functionality
  (friebe)

RFCs
~~~~
- Implemented RFC #0194 - Add XPClass::getDeclared*() methods
  (friebe)
- Implemented RFC #0193 - Generics optimization
  (friebe)
- Implemented RFC #0197 - Type literals in tokens
  (friebe)
- Implemented RFC #0189 - Extension methods
  (friebe)
- Implemented RFC #0185 - ClassFormatException for malformed annotations
  (friebe)  


Version ?.?.?, released ????-??-??
----------------------------------
SVN version: ?????

Heads up!
~~~~~~~~~
- Changed xpcli runner to display exceptions raised in run() block of  
  the run command class including stacktrace
  (friebe)
- Deprecated lang.Primitive::$INTEGER in favor of lang.Primitive::$INT
  (friebe)
- Deprecated lang.Type::$ANY in favor of lang.Type::$VAR
  (friebe)
- Changed util.collections.Map interface to ensure array access works.
  Any implementation must now adhere to http://de3.php.net/arrayaccess
  (friebe)

RFCs
~~~~
- Implemented RFC #0178 - XP installations (runner part)
  (friebe)
- Implemented RFC #0183 - lang.ResourceProvider
  (kiesel)

Bugfixes
~~~~~~~~
- Fixed rdbms.StatementFormatter handling of booleans in %d token
  (friebe)
- Fixed org.nagios.NscaClient's handling of CRC32 checksums
  and thus fixes passive nagios checks since security.checksum
  refactoring
  (kiesel)