@@ -132,6 +132,9 @@ class="net.xp_framework.unittest.reflection.TypeTest"
 [isinstance]
 class="net.xp_framework.unittest.reflection.IsInstanceTest"
 
+[accessibility]
+class="net.xp_framework.unittest.reflection.AccessibilityTest"
+
 [generics.definition]
 class="net.xp_framework.unittest.core.generics.DefinitionReflectionTest"
 
