@@ -30,6 +30,8 @@ Heads up!
 
 Features
 ~~~~~~~~
+- Enabled protected member access via reflection
+  (friebe)
 - Changed command line reflection ("xp -r") to display generic definitions
   (friebe)
 - Extended is() core functionality to accept primitive and array types
